# napari-splineit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  splineit.py  tox.ini  utils.py
.github/workflows/: test_and_deploy.yml
data/: bbbc020.TIF  bbbc038.tif
docs/: conf.py  index.rst
napari_splineit/: main.py  napari_splineit.py  plugin.py  splinegenerator.py  utils.py
src/napari_splineit/: __init__.py  _reader.py  _sample_data.py  _widget.py  _writer.py  napari.yml
src/napari_splineit/_tests/: test_sample_data.py  test_widget.py
src/napari_splineit/interpolation/: __init__.py  cubic.py  interpolator_base.py  spline.py  splinegenerator.py  uhlmann.py  utils.py
src/napari_splineit/layer/: _ctrl_layer.py  _interpolated_layer.py  _shape_list.py  layer_factory.py
src/napari_splineit/widgets/: __init__.py  double_spin_slider.py  spin_slider.py
