[metadata]
name = napari_splineit
description = A napari plugin for spline manipulation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uhlmanngroup/napari-splineit
author = Thorsten Beier
author_email = derthorstenbeier@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
include_package_data = True
project_urls =
    Bug Tracker = https://github.com/uhlmanngroup/napari-splineit/issues
    Documentation = https://github.com/uhlmanngroup/napari-splineit#README.md
    Source Code = https://github.com/uhlmanngroup/napari-splineit
    User Support = https://github.com/uhlmanngroup/napari-splineit/issues

[options]
packages = find:
install_requires =
    numpy
    qtpy
    scikit-image
    scipy
python_requires = >=3.7
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-splineit = napari_splineit:napari.yml

[options.extras_require]
testing =
    napari
    pyqt5
    pytest
    pytest-cov
    pytest-qt
    tox

[options.package_data]
napari_splineit =
    napari.yml
